Closed Bug 686118 Opened 14 years ago Closed 14 years ago

Segfault when passing undefined to GlodaUtils.deMime

Categories

(MailNews Core :: MIME, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 9.0

People

(Reporter: protz, Assigned: protz)

Details

(Keywords: crash)

Attachments

(1 file)

Attached patch FixSplinter Review
js> Components.utils.import("resource:///modules/gloda/utils.js"); [object BackstagePass] js> GlodaUtils.deMime(undefined) → SEGFAULT Patch attached. (Disclaimer: I have not tested it since my objdir is b0rken).
Attachment #559685 - Flags: review?(dbienvenu)
any idea what crash signature results?
Severity: normal → critical
Keywords: crash
AFAIK only Thunderbird Conversations triggered this and only for a brief period of time, and not even in a released version on AMO, so it's likely that the crash reports will be low...
Comment on attachment 559685 [details] [diff] [review] Fix r=me if you use NS_ENSURE_ARG_POINTER(header);
Attachment #559685 - Flags: review?(dbienvenu) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 9.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: