Bug 686118 - Segfault when passing undefined to GlodaUtils.deMime r=bienvenu